# Weaver

./: .gitignore  ARCHITECTURE.md  PLAN.md  PLAN_MACOS.md  PLAN_WINDOWS.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  worklog.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  mai1n.yml
docs/: signing.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands_crossplatform.rs  lib.rs  mcp.rs
src-tauri/src/atspi/: actions.rs  mod.rs  tree.rs
src-tauri/src/automation/: clipboard.rs  keyboard.rs  mod.rs  windows.rs
src-tauri/src/backend/: mod.rs  shared_types.rs
src-tauri/src/backend/linux/: mod.rs
src-tauri/src/backend/linux/atspi/: actions.rs  client.rs  types.rs
src-tauri/src/backend/linux/automation/: mouse.rs
src-tauri/src/backend/linux/wayland/: mod.rs
src-tauri/src/backend/macos/: mod.rs
src-tauri/src/backend/macos/appkit/: clipboard.rs  input.rs  mod.rs  workspace.rs
src-tauri/src/backend/macos/ax/: actions.rs  client.rs  mod.rs  tree.rs  types.rs
src-tauri/src/backend/windows/: mod.rs
src-tauri/src/backend/windows/uiautomation/: actions.rs  client.rs  mod.rs  tree.rs  types.rs
src-tauri/src/backend/windows/win32/: clipboard.rs  input.rs  mod.rs  windows.rs
src-tauri/src/db/: mod.rs
src-tauri/src/keyring/: mod.rs
src-tauri/src/tools/: mod.rs
src/agent/: critic.ts  executor.ts  loop.ts  memory.ts  planner.ts  reflection.ts  types.ts
src/components/chat/: MessageList.tsx
src/components/common/: Button.tsx  WeaverLogo.tsx
src/components/composer/: AppPicker.tsx  AttachmentChips.tsx  Composer.tsx
src/components/ide/: ActivityBar.tsx  AgentPanel.tsx  CodeEditor.tsx  CwdPicker.tsx  DiffViewer.tsx  FileExplorer.tsx  IdeLayout.tsx  StatusBar.tsx  Terminal.tsx
src/components/model-picker/: ModelPickerPopup.tsx
src/components/projects/: ProjectSettingsModal.tsx
src/components/sidebar/: Sidebar.tsx
src/lib/: attachments.ts  chain.ts  cognitive.ts  i18n.ts  memory-import.ts  scheduler.ts  tauri-types.ts  tauri.ts  textToolParser.ts  themes.ts  tools.ts
src/mcp/: client.ts  presets.ts
src/providers/: index.ts  openrouter-models.ts  provider-models.ts  registry.ts  store.ts  types.ts
src/providers/adapters/: anthropic.ts  bedrock.ts  gemini.ts  ollama.ts  openai-compat.ts  vertexai.ts
src/skills/: installer.ts  registry.ts
src/store/: weaver.ts
src/styles/: tokens.css
src/views/: MeView.tsx  Views.tsx
tests/windows/: apps.rs  smoke_test.ps1
