[package]
name = "weaver"
version = "0.1.0"
description = "Weaver — desktop agent that operates any app via Accessibility APIs"
authors = ["andreslpxz"]
license = "Apache-2.0"
repository = "https://github.com/andreslpxz/Weaver"
edition = "2021"
rust-version = "1.77"

[lib]
name = "weaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# D-Bus / AT-SPI (Linux accessibility)
zbus = { version = "4", default-features = false, features = ["tokio"] }

# OS keychain for API keys
keyring = "3"

# SQLite for episodic/semantic memory
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
which = "7"

[target.'cfg(target_os = "linux")'.dependencies]
# X11 raw protocol for synthetic input events (keyboard/mouse)
x11rb = "0.13"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
